Isabelle NEWS -- history of user-relevant changes
=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Inner syntax translations now support formal dependencies via commands
'syntax_types' or 'syntax_consts'. This is essentially an abstract
specification of the effect of 'translations' (or translation functions
in ML). Most Isabelle theories have been adapted accordingly, such that
hyperlinks work properly e.g. for "['a, 'b] \<Rightarrow> 'c" or "\<lbrakk>A; B\<rbrakk> \<Longrightarrow> C" in
Pure, and "\<forall>x\<in>A. B x" or "\<exists>x\<in>A. B x" in HOL.

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also
~~/src/HOL/Imperative_HOL/ex/Congproc_Ex.thy for further explanations
and examples.

* The attribute "cong_format" produces the internal format of Simplifier
"cong" rules, notably for congproc implementations.


*** HOL ***

* Various declaration bundles support adhoc modification of notation,
notably like this:

  unbundle no_list_syntax
  unbundle no_listcompr_syntax
  unbundle no_rtrancl_syntax
  unbundle no_trancl_syntax
  unbundle no_reflcl_syntax

This is more robust than individual 'no_syntax' / 'no_notation'
commands, which need to copy mixfix declarations from elsewhere and thus
break after changes in the library.

* Theory "HOL.Wellfounded":
  - Removed lemma wellorder.wfP_less. Use wellorder.wfp_on_less instead.
    Minor INCOMPATIBILITIES.
  - Renamed lemmas. Minor INCOMPATIBILITY.
      accp_wfPD ~> accp_wfpD
      accp_wfPI ~> accp_wfpI
      wfPUNIVI ~> wfpUNIVI
      wfP_SUP ~> wfp_SUP
      wfP_accp_iff ~> wfp_iff_accp
      wfP_acyclicP ~> wfp_acyclicP
      wfP_def ~> wfp_def
      wfP_empty ~> wfp_empty
      wfP_eq_minimal ~> wfp_eq_minimal