@@ -792,7 +792,7 @@ text \<open>
 
 subsection \<open>Syntax\<close>
 
-bundle no_permutation_syntax
+open_bundle no_permutation_syntax
 begin
 no_notation swap    (\<open>\<langle>_ \<leftrightarrow> _\<rangle>\<close>)
 no_notation cycle   (\<open>\<langle>_\<rangle>\<close>)
@@ -805,7 +805,5 @@ notation swap       (\<open>\<langle>_ \<leftrightarrow> _\<rangle>\<close>)
 notation cycle      (\<open>\<langle>_\<rangle>\<close>)
 notation "apply"    (infixl \<open>\<langle>$\<rangle>\<close> 999)
 end
-
-unbundle no_permutation_syntax
 
 end
